--- a/src/index.pug
+++ b/src/index.pug
@@ -1906,7 +1906,126 @@ block main
                     | &lt;/script&gt;
     section
         section
-            h1 Axios
+            h1
+                a(href="https://github.com/axios/axios" target="_blank") Axios
+
+        section
+            h3 Qué es?
+            p Es un cliente HTTP basado en Promesas para Javascript, el cual puede ser utilizado tanto en tu aplicación Front-end, como en el Back-end con Nodejs. Utilizando Axios, es muy sencillo enviar peticiones a endpoints REST y realizar operaciones CRUD.
+
+        section
+            h3 Feature
+            ul
+                li Realizar peticiones XMLHttpRequest (Ajax) desde el navegador de una manera sencilla.
+                li Soporta el API de Promesas.
+                li Intercepta peticiones y respuestas.
+                li Transforma la información de las peticiones y respuestas.
+                li Cancela peticiones.
+                li Transforma automáticamente la información en formato JSON.
+                li Soporta protección del lado del cliente contra ataques CSRF (Cross-site request forgery).
+
+        section
+            h3 Instalación
+            pre
+                code(class="bash" data-trim data-noescape)
+                    | npm install axios
+
+        section(data-menu-title="Post Request")
+            h3 Enviando un Post Request
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;script&gt;
+                    | import axios from 'axios';
+                    | export default {
+                    | data() {
+                    |     return {
+                    |     snackbar: false,
+                    |     color: 'success',
+                    |     mode: '',
+                    |     timeout: 6000,
+                    |     textSucces: 'Mensaje Registrado',
+                    |     inputMensaje: '',
+                    |     mensajes: ['Mensaje 123456', 'Mensaje 987654', 'Mensaje 987455']
+                    |     };
+                    | },
+                    | computed: {
+                    |     getMensajes() {
+                    |     return this.mensajes;
+                    |     },
+                    |     validarButton() {
+                    |     return this.inputMensaje == '';
+                    |     }
+                    | },
+                    | methods: {
+                    |     guardar() {
+                    |     let formData = {
+                    |         contenido: this.inputMensaje
+                    |     };
+                    |     axios
+                    |         .post('https://my-vue-axios.firebaseio.com/mensaje.json', formData)
+                    |         .then(response =&gt; {
+                    |         console.log(response);
+                    |         this.snackbar = true;
+                    |         })
+                    |         .catch(error =&gt; {
+                    |         console.log(error);
+                    |         this.snackbar = true;
+                    |         this.color = 'danger';
+                    |         this.textSucces = 'Se Produjo un Problema en el Proceso';
+                    |         });
+                    |     this.limpiarInput();
+                    |     },
+                    |     limpiarInput() {
+                    |     this.inputMensaje = '';
+                    |     }
+                    | }
+                    | };
+                    | &lt;/script&gt;
+
+        section(data-menu-title="Get Request")
+            h3 Enviando un Get Request
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | created() {
+                    |     axios
+                    |     .get('https://my-vue-axios.firebaseio.com/mensaje.json')
+                    |     .then(response =&gt; {
+                    |         console.log(response);
+                    |     })
+                    |     .catch(error =&gt; {
+                    |         console.log(error);
+                    |     });
+                    | },
+
+        section(data-menu-title="Manipulando Data")
+            h3 Manipulando Data
+            pre
+                code(class="javascript" data-trim data-noescape)
+                    | created() {
+                    |     axios
+                    |     .get('https://my-vue-axios.firebaseio.com/mensaje.json')
+                    |     .then(response =&gt; {
+                    |         console.log(response);
+                    |         this.mensajes = response.data;
+                    |     })
+                    |     .catch(error =&gt; {
+                    |         console.log(error);
+                    |     });
+                    | }
+
+        section
+            h3 Cambios en la Vista
+            pre
+                code(class="html" data-trim data-noescape)
+                    | &lt;v-list-tile avatar v-for="(mensaje, index) in getMensajes" :key="index"&gt;
+                    |     &lt;v-list-tile-action&gt;
+                    |         &lt;v-icon color="red"&gt;mail&lt;/v-icon&gt;
+                    |     &lt;/v-list-tile-action&gt;
+                    |     &lt;v-list-tile-content&gt;
+                    |         {{ mensaje.contenido }}
+                    |     &lt;/v-list-tile-content&gt;
+                    | &lt;/v-list-tile&gt;
+
 
 
 
